# Octopus-Lab

./: .gitignore  Cargo.toml  README.md  compression.md  compression.py  draweyes.py  segments.json.xz
python/: compression.py  draweyes.py  drawframes.py  drawtrace.py
src/: main.rs  model.rs
