[package]
name = "octopus-lab"
version = "0.1.0"
edition = "2018"
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29.1"
liquidfun = { git = "https://github.com/rianadon/liquidfun-rust", branch="rustup" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
